styles.css
:root {
    --imgWidth:calc(8vw + 12vh);
    --imgHeight: calc((8vw + 12vh)*0.65);
    --const: 4vw;
    --red: rgb(93,0,1);
    --fontNextPrev: calc(3vw + 1vh);
    --fontActive: 8.5vw;
}

body{
    overflow: hidden;
    background: var(--red);
}
#background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    pointer-events: none; /* Ensures that the background doesn't interfere with other elements */
    background: radial-gradient(circle, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.6) 100%);
}
#carousel{
    box-sizing: border-box;
}
.carousel-element {
    width: var(--imgWidth);
    height: var(--imgHeight);
    background-color: rgba(0, 0,0, 0);
    position: absolute; /* Make sure the element is positioned absolutely or relatively */
    top:150%;
    left:150%;
    transition: all 0.5s ease; /* Smooth transition on all properties */
    opacity: 0.5;
    border-radius: 9px;
    /*! border-width: 12px; */
    /*! border-color: red; */
    border: 1px solid antiquewhite;
}

.active{
    top:42%;
    left:calc(50% - var(--imgWidth)/2);
    transform: scale(2.6);
    opacity: 1;
    z-index: 98;
    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0.2);

    /*! background-color: rgba(0,0,0,0); */
}

.prev{
    top:5%;
    left:calc(100% - var(--imgWidth));
    margin-left: -16px;
}

.next{
    top:80%;
    left:0%;
    margin-left: 16px;
}

.out-next{
    top:110%;
    left:-10%;
}

.out-prev{
    top:-10%;
    left:110%;
}

.hidden{
    display: none;
}

.car-img{
    width: var(--imgWidth);
    height: var(--imgHeight);
    border-radius: 8px;
    /*! z-index: 2; */

}

.spec{
    opacity: 0;
    transition: all 0.5s ease;
}
.active-spec{
    opacity: 1;
}

.name{
    font-family: Montserrat;
    font-weight: bolder;
    color: antiquewhite;
    z-index: 10;
    position:absolute;
    opacity: 0;
    transition: all 0.5s ease;
    visibility: hidden;
    /*! max-width: 48vw; */
    z-index: 99;
    font-size: var(--fontActive);

    margin: 0;
    width: 100%;
}

.name-active{
    visibility: visible;
    opacity: 1;
    top: calc(30% - 2.5 * var(--const));
    left: calc(1.7 * var(--const));
    /*! text-shadow: 5px 5px 0px black; */
}

.name-next{
    visibility: hidden;
    top:70%;
    left:-40%;
    transform: scale(0.3);
}

.name-prev{
    visibility: hidden;
    top:-5%;
    left:44%;
    transform: scale(0.3);

    width: 100%;
}

#infos{
    position: absolute;
    max-width: 65%;
    height: calc(35% - 3*var(--const));
    overflow: hidden;
    margin: 10px;
    padding-inline: 18px;
}

.info{
    box-sizing: border-box;
    font-size: 1.05rem;
    color: antiquewhite;
}

#footer{
    position: absolute;
    display: flex;
    left: 40%;
    bottom: 4%;
}

.ferrari-logo{
    width: calc(1vw + 26vh);
    height: calc(1vw + 14vh);
}

#footer-text-container{
    display: flex;
    flex-direction: column;
    row-gap: 0px;
    text-align: end;
    padding-block: 2.5vh;
}

#footer h1{
    color: antiquewhite;
    font-size: calc(1.7vw + 1.6vh);
    margin: 0;
}

#footer p{
    color: antiquewhite;
    font-size: calc(0.9vw + 0.9vh);
    margin-block: 2vh;
}

@media only screen and (max-width: 600px) {
    .name{
        text-align: center;
    }

    .name-active{
        left: 0px;
    }
}

